# Rover_Go2

./: .gitignore  .gitmodules  INVESTIGATION.md  LICENSE  MEMORY.md  README.md  notes.txt  project_zenoh_go2_setup.md
groundstation/: README.md  bridge.json5  camera_gstreamer.sh  client.json5  ros2-local.sh  router.json5  run-zenoh-bridge.sh  run-zenoh-router.sh  zenoh-groundstation-bridge.service  zenoh-groundstation-router.service
orin_systemd/: bridge.json5  go2-relay.service  go2_relay.py  zenoh-router.service
project_notes/: front_camera_h265_transcode.md
src/go2_camera/: package.xml  setup.cfg  setup.py
src/go2_camera/go2_camera/: camera_capture.py  camera_muxing.py  camera_ros2_conversion.py  front_video_transcode.py
src/go2_camera/launch/: camera_capture_launch.py
src/go2_camera_interface/: CMakeLists.txt  package.xml
src/go2_camera_interface/srv/: CamParams.srv
src/go2_control/: CMakeLists.txt  package.xml
src/go2_control/launch/: go2_joy_launch.py  groundstation_launch.py
src/go2_control/scripts/: joy_teleop.py
src/go2_control_interface/: package.xml
src/go2_nav/: CMakeLists.txt  package.xml
src/go2_nav/config/: groundstation_mapping.rviz  mapping.rviz  rtabmap_mapping.yaml
src/go2_nav/launch/: groundstation_mapping.launch.py  mapping.launch.py
src/go2_nav/scripts/: cloud_restamp_node.py
src/go2_odom/: CMakeLists.txt  package.xml
src/go2_odom/config/: ekf.yaml  gps_base.yaml  gps_rover.yaml
src/go2_odom/launch/: gps_base.launch.py  gps_rover.launch.py  (+1 more)
systemd/: cyclonedds.xml  zenoh-bridge.service  zenoh-router.service
(+3 files in other folders)
