<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_nav</name>
  <version>0.0.0</version>
  <description>Nav2 mapping launch files and configs for the Go2</description>
  <maintainer email="jar3dnorth@gmail.com">jn2-alt</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>go2_odom</exec_depend>
  <exec_depend>go2_description</exec_depend>
  <exec_depend>rtabmap_slam</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
